src-ken&y/objects/Process__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to bypass the update.</description>
        <label>Auto Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Step__c</fullName>
        <label>Object Step</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Process</label>
</CustomObject>